--- a/public/_layouts/base.html
+++ b/public/_layouts/base.html
@@ -8,20 +8,22 @@
     <meta name="author" content="{{ site.author }}">
 	<link rel="shortcut icon" href="favicon.ico">
     <title>{{ page.title }}</title>
+    {% feed_meta %}
+    {% seo %}
     <!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<!-- Bootstrpa Icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!-- Theme CSS -->
-    <link rel="stylesheet" href="/assets/css/main.css">
-	<!-- FontAwesome JS -->
-    <script defer src="/assets/fontawesome/js/all.js"></script>
-    {% feed_meta %}
-    {% seo %}
+    <link rel="stylesheet" href="/assets/css/output.css">
   </head>
   <body>
     {% include navigation.html %}
       {{ content }}
+
+	<!-- FontAwesome JS -->
+    <script defer src="/assets/fontawesome/js/all.js"></script>
+    <script type="text/javascript" src="/assets/js/bundle.js"></script>
   </body>
 </html>
