--- a/public/_layouts/base.html
+++ b/public/_layouts/base.html
@@ -16,6 +16,8 @@
 	<!-- Bootstrpa Icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!-- Theme CSS -->
+    <link rel="stylesheet" href="../assets/dist/output.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     {% include navigation.html %}
