--- a/public/_layouts/base.html
+++ b/public/_layouts/base.html
@@ -20,6 +20,15 @@
   <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PPFBHT8X02"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PPFBHT8X02');
+    </script>
     {% include navigation.html %}
     {{ content }}
 
