--- a/public/_layouts/base.html
+++ b/public/_layouts/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,17 +10,9 @@
     <title>{{ page.title }}</title>
     {% feed_meta %}
     {% seo %}
-    <!-- Google Fonts -->
-	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-	<!-- Bootstrpa Icons -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <!-- Theme CSS -->
-    <link rel="stylesheet" href="../assets/dist/output.css" />
-  <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{{ '../assets/dist/output.css' | absolute_url }}" type="text/css">
   </head>
-  <body>
-    <!-- Google tag (gtag.js) -->
+  <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PPFBHT8X02"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
@@ -29,11 +21,10 @@
 
     gtag('config', 'G-PPFBHT8X02');
     </script>
+  <body>
     {% include navigation.html %}
     {{ content }}
 
-	<!-- FontAwesome JS -->
-    <script defer src="/assets/vendor/fontawesome/js/all.js"></script>
-    <script type="text/javascript" src="/assets/dist/bundle.js"></script>
+    <script type="text/javascript" src="{{ '../assets/dist/bundle.js' | absolute_url }}"></script>
   </body>
 </html>
